<resources>
    <string name="mine_material">我的验证资料</string>
    <string name="mine_add">我的拼单</string>
    <string name="mine_setting">设置</string>
    <string name="mine_find_things">我的失物招领</string>
    <string name="mine_find_people">我的寻人</string>
    <string name="mine_change_pwd">修改密码</string>
    <string name="mine_exit">退出登陆</string>
    <string name="mine_update_authentication">修改我的验证资料</string>

    <string name="mine_input_hint_stu_num">学号</string>
    <string name="mine_input_hint_pwd">密码</string>
    <string name="mine_login">登陆</string>
    <string name="mine_forget_pwd">忘记密码</string>
    <string name="mine_type_register"><![CDATA[1.输入学号 > 2.设置昵称，密码 > 3.输入姓名，学院]]></string>
    <string name="mine_next">下一步</string>

    <string name="mine_nickname">昵称</string>
    <string name="mine_finish">完成注册</string>
    <string name="mine_college">学院</string>
    <string name="mine_username">姓名</string>

    <string name="mine_register">没有账号？前去注册</string>
    <string name="mine_skip">跳过登陆</string>
    <string name="mine_lose_sno">输入你的学号</string>
    <string name="mine_lose_pwd">输入新密码</string>
    <string name="mine_sure">确定</string>
</resources>
